[web] Add: Fix firefox open javascript link bug http://stackoverflow.com/questions/10949016/firefox-javascript-return-false-in-href-redirects-the-browser-and-displays-false

--- a/source/web/src/static/styles/propertyDetails.less
+++ b/source/web/src/static/styles/propertyDetails.less
@@ -70,14 +70,14 @@ body{
         @media @phone {
             display: none;
         }
-        
+
         font-size: 18px;
 
         .parent{
             text-decoration: none;
             color: @red;
         }
-        
+
         .current{
             font-weight: bold;
         }
@@ -1405,6 +1405,10 @@ body{
                 >.price {
                     font-size:24px;
                     color:white;
+
+                    br {
+                        display:none;
+                    }
                 }
             }
         }
